Added county-by-county activity heatmaps

--- a/covidtracker.ipynb
+++ b/covidtracker.ipynb
@@ -21,7 +21,9 @@
     "\n",
     "from huntlib.util import benfords\n",
     "\n",
-    "from datetime import datetime"
+    "from datetime import datetime\n",
+    "\n",
+    "import json"
    ]
   },
   {
@@ -38,7 +40,8 @@
    "outputs": [],
    "source": [
     "COVID_DATA_URL = 'https://data.virginia.gov/api/views/bre9-aqqr/rows.csv?accessType=DOWNLOAD'\n",
-    "ROLLING_AVERAGE_DAYS = 7"
+    "ROLLING_AVERAGE_DAYS = 7\n",
+    "RECENT_DAYS = 14"
    ]
   },
   {
@@ -98,7 +101,7 @@
    "source": [
     "full_df = pd.read_csv(io.BytesIO(res.content), parse_dates=['Report Date'] )\n",
     "\n",
-    "full_df['FIPS'] = full_df['FIPS'].astype('category')\n",
+    "full_df['FIPS'] = full_df['FIPS'].astype('str')\n",
     "full_df['Locality'] = full_df['Locality'].astype('category')\n",
     "full_df['VDH Health District'] = full_df['VDH Health District'].astype('category')\n",
     "\n",
@@ -333,6 +336,102 @@
     "plot_ra(full_df, column='Daily Cases', locality=locality, anomaly_threshold=3)\n",
     "plot_ra(full_df, column='Daily Hospitalizations', locality=locality)\n",
     "plot_ra(full_df, column='Daily Deaths', locality=locality)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Activity Heatmaps by County"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('geojson-counties-fips.json', 'r') as f:\n",
+    "    counties = f.read()\n",
+    "    \n",
+    "counties = json.loads(counties)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_time = full_df[-1:]['Report Date'] - pd.DateOffset(RECENT_DAYS, 'D')\n",
+    "\n",
+    "recent_df = full_df[full_df['Report Date'] >= start_time.iloc[0]]\n",
+    "\n",
+    "recent_df = recent_df.drop(['Total Cases', 'Hospitalizations', 'Deaths'], axis='columns')\n",
+    "\n",
+    "recent_df = recent_df.rename(\n",
+    "    {\n",
+    "        'Daily Cases': 'Cases',\n",
+    "        'Daily Hospitalizations': 'Hospitalizations',\n",
+    "        'Daily Deaths': 'Deaths'\n",
+    "    },\n",
+    "    axis='columns'\n",
+    ")\n",
+    "\n",
+    "recent_df = recent_df.groupby(['FIPS', 'Locality']).sum().reset_index()\n",
+    "recent_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_heatmap(df, geojson, column=None, locations='FIPS', height=1000, width=None, color_scale='viridis'):\n",
+    "    fig = px.choropleth(\n",
+    "        df,\n",
+    "        geojson=geojson,\n",
+    "        locations=locations,\n",
+    "        color=column,\n",
+    "        scope='usa',\n",
+    "        hover_data=['Locality', 'FIPS', column],\n",
+    "        height=height,\n",
+    "        width=width,\n",
+    "        color_continuous_scale=color_scale,\n",
+    "        title=f\"{column} in Last {RECENT_DAYS} Days by County\"\n",
+    "    )\n",
+    "\n",
+    "    fig.update_geos(fitbounds='locations')\n",
+    "    \n",
+    "    fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_heatmap(recent_df, counties, column='Cases')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_heatmap(recent_df, counties, column='Hospitalizations')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_heatmap(recent_df, counties, column='Deaths')"
    ]
   }
  ],
