Use widgets to configure notebook and select locality for drill down.

--- a/covidtracker.ipynb
+++ b/covidtracker.ipynb
@@ -23,7 +23,10 @@
     "\n",
     "from datetime import datetime\n",
     "\n",
-    "import json"
+    "import json\n",
+    "\n",
+    "import ipywidgets as widgets\n",
+    "from IPython.display import display"
    ]
   },
   {
@@ -39,9 +42,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "COVID_DATA_URL = 'https://data.virginia.gov/api/views/bre9-aqqr/rows.csv?accessType=DOWNLOAD'\n",
-    "ROLLING_AVERAGE_DAYS = 7\n",
-    "RECENT_DAYS = 14"
+    "COVID_DATA_URL = 'https://data.virginia.gov/api/views/bre9-aqqr/rows.csv?accessType=DOWNLOAD'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w_ra_days = widgets.BoundedIntText(\n",
+    "    min=3,\n",
+    "    value=7,\n",
+    "    description='Rolling Average Days: '\n",
+    ")\n",
+    "\n",
+    "w_recent_days = widgets.BoundedIntText(\n",
+    "    min=1,\n",
+    "    max=180,\n",
+    "    value=14,\n",
+    "    description=\"Recent Days: \"\n",
+    "    \n",
+    ")\n",
+    "\n",
+    "display(w_ra_days)\n",
+    "display(w_recent_days)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ROLLING_AVERAGE_DAYS = w_ra_days.value # 7\n",
+    "RECENT_DAYS = w_recent_days.value # 14"
    ]
   },
   {
@@ -318,24 +353,22 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### James City"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 'James City', 'Williamsburg', 'York', 'Newport News', 'Hampton', etc\n",
-    "locality = 'James City'\n",
+    "widget_locality_chooser = widgets.Dropdown(\n",
+    "    options=full_df.Locality.unique(),\n",
+    "    value='James City',\n",
+    "    description=\"Locality: \"\n",
+    ")\n",
     "\n",
-    "plot_ra(full_df, column='Daily Cases', locality=locality, anomaly_threshold=3)\n",
-    "plot_ra(full_df, column='Daily Hospitalizations', locality=locality)\n",
-    "plot_ra(full_df, column='Daily Deaths', locality=locality)"
+    "@widgets.interact(locality=widget_locality_chooser)\n",
+    "def make_locality_plots(locality):\n",
+    "    plot_ra(full_df, column='Daily Cases', locality=locality)\n",
+    "    plot_ra(full_df, column='Daily Hospitalizations', locality=locality)\n",
+    "    plot_ra(full_df, column='Daily Deaths', locality=locality)"
    ]
   },
   {
