Better timeseries analysis techniques
* Replaced statmodels' naive seasonal_decompose() with LOESS-based STL() function
* Time series graphs can now choose between 'baseline' (trend + seasonal components) and
  the existing rolling average as the long-term comparison line

--- a/covidtracker.ipynb
+++ b/covidtracker.ipynb
@@ -17,7 +17,8 @@
     "\n",
     "import io\n",
     "\n",
-    "from statsmodels.tsa.seasonal import seasonal_decompose\n",
+    "from statsmodels.tsa.seasonal import STL\n",
+    "from scipy import stats\n",
     "\n",
     "from huntlib.util import benfords\n",
     "\n",
@@ -273,7 +274,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_ra(df, column, locality=None, anomaly_threshold=3):\n",
+    "def plot_timeseries(df, column, locality=None, anomaly_threshold=3, baseline_type='ra'):\n",
     "\n",
     "    if locality:\n",
     "        local_series = df[df.Locality == locality][['Report Date', column]].groupby('Report Date').sum().sort_index()[column]\n",
@@ -290,20 +291,33 @@
     "        )\n",
     "    )\n",
     "\n",
-    "    fig.add_trace(\n",
-    "        go.Scatter(\n",
-    "            x=local_series.index,\n",
-    "            y=local_series.rolling(ROLLING_AVERAGE_DAYS).mean(),\n",
-    "            mode='lines',\n",
-    "            marker_color='green',\n",
-    "            name=\"Rolling Average\"\n",
+    "    seasonal = STL(local_series, robust=True)\n",
+    "    \n",
+    "    seasonal = seasonal.fit()\n",
+    "    \n",
+    "    if baseline_type == 'trend' or baseline_type == 'trend_seasonal':\n",
+    "        fig.add_trace(\n",
+    "            go.Scatter(\n",
+    "                x=local_series.index,\n",
+    "                y=seasonal.trend + seasonal.seasonal,\n",
+    "                mode='lines',\n",
+    "                marker_color='green',\n",
+    "                name='Basline (Trend + Seasonal)'\n",
+    "            )\n",
     "        )\n",
-    "    )\n",
-    "\n",
-    "    seasonal = seasonal_decompose(local_series, model='additive')\n",
+    "    else:\n",
+    "        fig.add_trace(\n",
+    "            go.Scatter(\n",
+    "                x=local_series.index,\n",
+    "                y=local_series.rolling(ROLLING_AVERAGE_DAYS).mean(),\n",
+    "                mode='lines',\n",
+    "                marker_color='green',\n",
+    "                name=\"Baseline (Rolling Average)\"\n",
+    "            )\n",
+    "        )\n",
     "    \n",
     "    anomalies = seasonal.resid[abs(seasonal.resid - seasonal.resid.mean()) >= (anomaly_threshold * seasonal.resid.std())]\n",
-    "    \n",
+    "\n",
     "    fig.add_trace(\n",
     "        go.Scatter(\n",
     "            x=anomalies.index,\n",
@@ -338,9 +352,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_ra(full_df, column='Daily Cases')\n",
-    "plot_ra(full_df, column='Daily Hospitalizations')\n",
-    "plot_ra(full_df, column='Daily Deaths')"
+    "plot_timeseries(full_df, column='Daily Cases')\n",
+    "plot_timeseries(full_df, column='Daily Hospitalizations')\n",
+    "plot_timeseries(full_df, column='Daily Deaths')"
    ]
   },
   {
@@ -357,9 +371,9 @@
     "\n",
     "@widgets.interact(locality=widget_locality_chooser)\n",
     "def make_locality_plots(locality):\n",
-    "    plot_ra(full_df, column='Daily Cases', locality=locality)\n",
-    "    plot_ra(full_df, column='Daily Hospitalizations', locality=locality)\n",
-    "    plot_ra(full_df, column='Daily Deaths', locality=locality)"
+    "    plot_timeseries(full_df, column='Daily Cases', locality=locality)\n",
+    "    plot_timeseries(full_df, column='Daily Hospitalizations', locality=locality)\n",
+    "    plot_timeseries(full_df, column='Daily Deaths', locality=locality)"
    ]
   },
   {
